# convolution-gpu-optimize

./: .gitignore  CMakeLists.txt  demo.cc  main.cpp  readme.md  test.ipynb
src/: CMakeLists.txt  layer.h  lenet.cpp  lenet.h  mnist.cc  network.cc  network.h
src/layer/: conv.cc  conv_cpu.cc  conv_cpu.h  conv_cust.cc  conv_cust.h  conv_gpu.cc  conv_gpu.h
src/layer/cuda/: cpu-new-forward.cc  cpu-new-forward.h  cuda_kernel.cu  cuda_kernel.h  cuda_manager.cu  cuda_manager.h  cuda_utils.cu  cuda_utils.h
src/layer/custom/: cpu-new-forward.cc  gpu-new-forward.h  gpu-utils.h  new-forward.cu
